--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
- margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+ margin: 10em auto 2em auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .05em; /* Adjust as needed */
   animation: 
     typing 3.5s steps(30, end),
