--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+body{
+  background-color: rgb(53, 53, 53);
+}
+li{
+  color: beige;
+}
 .daily-image {
-    /* z-index: -1; */
-    width: 100vw;
+    z-index: -1;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-size:     cover;                     
+    background-repeat:   no-repeat;
+    background-position: center center;
+    margin-bottom: 10px;
 }
 
 /* DEMO-SPECIFIC STYLES */
@@ -30,14 +43,9 @@
   50% { border-color: orange }
 }
 
-#planet_card{
-  height:300px;
-  width: 30vw;
-  border: 2px black solid;
-}
 
 .section_info{
-  display: flex;;
+  display: flex;
   /* flex-direction: column */
   /* justify-content: space-between;
   align-items: center; */
@@ -48,11 +56,30 @@
 
 #main_planet_img{
   height:300px;
-  width: 30vw;
+  width: 45vw;
   border: 2px black solid;
+  border-radius: 10px;
+  object-fit: scale-down;
 }
+
+#planet_card{
+  height:300px;
+  width: 45vw;
+  border: 2px black solid;
+  border-radius: 10px;
+}
+
 .photo_section{
   height: 400px;
   width: 90vw;
   border: 2px green solid;
+}
+.planet_section{
+  height: 50vh;
+}
+.planet_links{
+  border: black 2px solid;
+  border-radius: 10px;
+  height: 100px;
+  width: 90vw;
 }
