--- a/style.css
+++ b/style.css
@@ -71,8 +71,10 @@ li{
 
 #photo_section{
   height: 400px;
-  width: 90vw;
-  border: 2px green solid;
+  width: 100vw;
+  padding: 10px;
+  margin-bottom: 10px;
+  /* border: 2px green solid; */
 }
 .planet_section{
   height: 50vh;
@@ -82,4 +84,9 @@ li{
   border-radius: 10px;
   height: 100px;
   width: 90vw;
+}
+#today{
+  color: rgb(6, 1, 26);
+  text-shadow: 0px 0px 5px #fff;
+  font-size: 20px;
 }
